@@ -30,6 +30,7 @@ import androidx.compose.ui.Modifier
 import androidx.compose.ui.text.font.FontWeight
 import androidx.compose.ui.unit.dp
 import cafe.adriel.voyager.core.screen.Screen
+import cafe.adriel.voyager.koin.getScreenModel
 import domain.tutorial.RequestState
 import domain.tutorial.ToDoTask
 import presentation.components.tutorial.ErrorScreen
@@ -41,6 +42,10 @@ class HomeScreen : Screen {
     @OptIn(ExperimentalMaterial3Api::class)
     @Composable
     override fun Content(){
+        val viewModel = getScreenModel<HomeViewModel>()
+        val activeTasks by viewModel.activeTasks
+        val completedTasks by viewModel.completedTasks
+
         Scaffold(
             topBar = {
                 CenterAlignedTopAppBar(title = { Text(text = "Home")})
@@ -68,7 +73,7 @@ class HomeScreen : Screen {
             ){
                 DisplayTasks(
                     modifier = Modifier.weight(1f),
-                    tasks = RequestState.Idle,
+                    tasks = activeTasks,
                     onSelect = { selectedTask -> },
                     onFavourite = { task, isFavourite -> },
                     onComplete = { task, completed -> },
@@ -76,7 +81,7 @@ class HomeScreen : Screen {
                 Spacer(modifier = Modifier.height(24.dp))
                 DisplayTasks(
                     modifier = Modifier.weight(1f),
-                    tasks = RequestState.Idle,
+                    tasks = completedTasks,
                     showActive = false,
                     onComplete = { task, completed -> },
                     onDelete = {task ->},
